--- a/SimchaFund.Data/SimchaFund.Data.csproj
+++ b/SimchaFund.Data/SimchaFund.Data.csproj
@@ -39,9 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContributionInclusion.cs" />
+    <Compile Include="Contribution.cs" />
     <Compile Include="Contributor.cs" />
+    <Compile Include="Deposit.cs" />
     <Compile Include="Simcha.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimchaContributor.cs" />
     <Compile Include="SimchaFundManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
