--- a/MvcApplication12/MvcApplication12.csproj
+++ b/MvcApplication12/MvcApplication12.csproj
@@ -133,7 +133,9 @@
     </Compile>
     <Compile Include="Models\ContributionsViewModel.cs" />
     <Compile Include="Models\ContributorsIndexViewModel.cs" />
+    <Compile Include="Models\HistoryViewModel.cs" />
     <Compile Include="Models\SimchaIndexViewModel.cs" />
+    <Compile Include="Models\Transaction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -235,6 +237,7 @@
     <Content Include="Views\Simchas\Index.cshtml" />
     <Content Include="Views\Contributors\Index.cshtml" />
     <Content Include="Views\Simchas\Contributions.cshtml" />
+    <Content Include="Views\Contributors\History.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
